--- a/lijp.html
+++ b/lijp.html
@@ -60,7 +60,7 @@
     <section id="sec3" class="Even"></section>
     <section id="sec4" class="Oneven">
         <div>
-            Hello world!
+            Dit is een epische website!
         </div>
 
     </section>
